# z1

./: Cargo.toml  Dockerfile  README.md
src/: error_views.rs  main.rs
src/components/: controls.rs  head.rs  lang.rs  locale.rs  mod.rs  theme.rs
src/scripts/: main.js
src/templates/: header.rs  index.rs  mod.rs  project.rs  theme.rs
static/: projects.json  styles.css
translations/: en-US.json  es-ES.json
