[package]
name = "z1"
version = "0.2.2"
edition = "2021"

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.2", features = [ "translator-lightweight", "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
wasm-bindgen = "0.2.100"
anyhow = "1.0.99"
web-sys = "0.3.77"

# Engine-only dependencies go here
[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-axum = { version = "=0.4.2", features = [ "dflt-server" ] }

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(client)', 'cfg(engine)'] }
